--- a/LED Wall Android App/res/menu/activity_wall.xml
+++ b/LED Wall Android App/res/menu/activity_wall.xml
@@ -2,5 +2,9 @@
     <item android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:showAsAction="ifRoom|withText" />
+    <item android:id="@+id/menu_clearwall"
+        android:title="@string/menu_clearwall"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom|withText" />
 </menu>
