--- a/LED Wall Android App/res/menu/activity_wall.xml
+++ b/LED Wall Android App/res/menu/activity_wall.xml
@@ -7,4 +7,5 @@
         android:title="@string/menu_clearwall"
         android:orderInCategory="100"
         android:showAsAction="ifRoom|withText" />
+    <item android:id="@+id/menu_refresh" android:orderInCategory="100" android:title="@string/menu_refresh" android:showAsAction="ifRoom|withText"></item>
 </menu>
