--- a/LED Wall Android App/res/menu/activity_wall.xml
+++ b/LED Wall Android App/res/menu/activity_wall.xml
@@ -5,7 +5,8 @@
         android:showAsAction="ifRoom|withText" />
     <item android:id="@+id/menu_clearwall"
         android:title="@string/menu_clearwall"
-        android:orderInCategory="100"
+        android:orderInCategory="92"
         android:showAsAction="ifRoom|withText" />
-    <item android:id="@+id/menu_refresh" android:orderInCategory="100" android:title="@string/menu_refresh" android:showAsAction="ifRoom|withText"></item>
+    <item android:id="@+id/menu_refresh" android:orderInCategory="91" android:title="@string/menu_refresh" android:showAsAction="ifRoom|withText"></item>
+    <item android:id="@+id/menu_color" android:orderInCategory="90" android:title="@string/menu_color" android:showAsAction="ifRoom|withText"></item>
 </menu>
